# kinecho-main

./: .gitignore  README.md  app_main.py  chatbot.py  discord_bot.py  kinecho_main.py  kinecho_memory.json  memory_manager.py  pyproject.toml  requirements.txt  settings.ini  system_prompt.txt
interfaces/: base_interface.py  console_interface.py  discord_bot_interface.py  discord_bot_interface_ACTIVE.py  discord_interface.py
